[gd_scene load_steps=19 format=3 uid="uid://dtluac5j5kndr"]

[ext_resource type="Script" path="res://scenes/UI.gd" id="1_d5451"]
[ext_resource type="PackedScene" uid="uid://dabjqk3dy2d1g" path="res://actors/ui/MaterialSlot.tscn" id="2_c0sb2"]
[ext_resource type="PackedScene" uid="uid://6lcd325n3hge" path="res://actors/ui/WeaponSlot.tscn" id="3_dr1f0"]
[ext_resource type="Texture2D" uid="uid://bfkaw1anscyfo" path="res://assets/Player Life/hp_bar_back.png" id="4_iv4kd"]
[ext_resource type="Texture2D" uid="uid://dsr4eeyxm3jg5" path="res://assets/Player Life/hp_bar_red_over.png" id="4_jnhhf"]
[ext_resource type="Texture2D" uid="uid://birhrsrkyurpv" path="res://assets/UI/Ready Font/Image21.png" id="6_ptp3f"]
[ext_resource type="Texture2D" uid="uid://dsoya5brg37mp" path="res://assets/UI/Ready Font/Image22.png" id="7_u3kww"]
[ext_resource type="Texture2D" uid="uid://by1u1mmuwwekv" path="res://assets/UI/Ready Font/Image23.png" id="8_1ojmt"]
[ext_resource type="Texture2D" uid="uid://cv8g4qv8iimqd" path="res://assets/UI/Ready Font/Image24.png" id="9_se3id"]
[ext_resource type="Texture2D" uid="uid://b1ewcvx3kd674" path="res://assets/UI/Ready Font/Image25.png" id="10_1gwt7"]
[ext_resource type="Texture2D" uid="uid://bmsc54qk26q0c" path="res://assets/UI/Ready Font/Image26.png" id="11_p62x7"]
[ext_resource type="Texture2D" uid="uid://kxn7lyv2w6cr" path="res://assets/UI/Ready Font/Image27.png" id="12_5f2x0"]
[ext_resource type="Texture2D" uid="uid://c274d8th8q8l5" path="res://assets/UI/Ready Font/Image28.png" id="13_vq2a3"]
[ext_resource type="Texture2D" uid="uid://wjkyq6ouhwrg" path="res://assets/UI/Ready Font/Image29.png" id="14_xxjwu"]
[ext_resource type="Texture2D" uid="uid://2ljg2lotfklg" path="res://assets/UI/Ready Font/Image210.png" id="15_kmrmx"]
[ext_resource type="Texture2D" uid="uid://11a5s3aqut18" path="res://assets/UI/Ready Font/Image211.png" id="16_gvm47"]
[ext_resource type="Texture2D" uid="uid://dwk41do4ldjj" path="res://assets/UI/Ready Font/Image212.png" id="17_ndyko"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ywx3f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ptp3f")
}, {
"duration": 1.0,
"texture": ExtResource("7_u3kww")
}, {
"duration": 1.0,
"texture": ExtResource("8_1ojmt")
}, {
"duration": 1.0,
"texture": ExtResource("9_se3id")
}, {
"duration": 1.0,
"texture": ExtResource("10_1gwt7")
}, {
"duration": 1.0,
"texture": ExtResource("11_p62x7")
}, {
"duration": 1.0,
"texture": ExtResource("12_5f2x0")
}, {
"duration": 1.0,
"texture": ExtResource("13_vq2a3")
}, {
"duration": 1.0,
"texture": ExtResource("14_xxjwu")
}, {
"duration": 1.0,
"texture": ExtResource("15_kmrmx")
}, {
"duration": 1.0,
"texture": ExtResource("16_gvm47")
}, {
"duration": 1.0,
"texture": ExtResource("17_ndyko")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5451")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ReadyAnim" type="AnimatedSprite2D" parent="Control"]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_ywx3f")
frame = 11
frame_progress = 1.0

[node name="CraftLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 93.0
offset_top = -24.0
offset_right = 159.0
offset_bottom = -7.0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Craft? (Space)"

[node name="WeaponSlot" parent="." instance=ExtResource("3_dr1f0")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -41.0
offset_right = 39.0
offset_bottom = -9.0
grow_vertical = 0

[node name="MaterialSlot" parent="." instance=ExtResource("2_c0sb2")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -26.0
offset_right = 63.0
offset_bottom = -9.99998
grow_vertical = 0

[node name="MaterialSlot2" parent="." instance=ExtResource("2_c0sb2")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 68.0
offset_top = -26.0
offset_right = 84.0
offset_bottom = -9.99998
grow_vertical = 0
slot_idx = 1

[node name="HPBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 82.0
offset_bottom = 18.0
value = 30.0
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 4
stretch_margin_right = 6
stretch_margin_bottom = 4
texture_under = ExtResource("4_iv4kd")
texture_progress = ExtResource("4_jnhhf")

[node name="BossHPBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 7.0
offset_right = -16.0
offset_bottom = 18.0
value = 30.0
nine_patch_stretch = true
stretch_margin_left = 6
stretch_margin_top = 4
stretch_margin_right = 6
stretch_margin_bottom = 4
texture_under = ExtResource("4_iv4kd")
texture_progress = ExtResource("4_jnhhf")

[connection signal="animation_finished" from="Control/ReadyAnim" to="." method="_on_ready_anim_animation_finished"]
